--- a/web/src/ui/components/ShowFilterModalButton/ShowFilterModalButton.module.css
+++ b/web/src/ui/components/ShowFilterModalButton/ShowFilterModalButton.module.css
@@ -14,7 +14,7 @@
     right: 1.2rem;
     bottom: 1.2rem;
 
-    z-index: 8;
+    z-index: 10;
     cursor: pointer;
 }
 
