--- a/web/src/ui/components/Spinner/Spinner.module.css
+++ b/web/src/ui/components/Spinner/Spinner.module.css
@@ -4,7 +4,7 @@
 
 .spinner {
     position: absolute;
-    z-index: 16;
+    z-index: 20;
     top: 33vh;
     margin-left: calc(50% - 45px);
     width: 70px;
